# Market_Scout_Agent_Final

./: .dockerignore  .editorconfig  .gitignore  ARCHITECTURE_DIAGRAM.md  FLOW_EXPLANATION.html  PROJECT_DOCUMENTATION.md  PROTOTYPE_WALKTHROUGH.md  README.md  README2.md  architecture_presentation.html  docker-compose.prod.yml  docker-compose.yml  implementation_plan_target_universe.md  optimization_report.md  package-lock.json  package.json  project_map.md  prototype_presentation.html  refactor_backend.py  run.bat  start_platform.sh  stop_platform.sh  turbo.json
apps/backend/: .env.example  .gitignore  package.json  pyproject.toml  pytest.ini  requirements.txt  test_keys.py  vercel.json
apps/backend/alembic/: env.py
apps/backend/src/: main.py  verify_apis.py
apps/backend/src/api/: router.py
apps/backend/src/common/: cache_manager.py  cache_service.py  websockets.py
apps/backend/src/core/: api.py  celery_client.py  config.py  database.py  datetime_utils.py  logger.py  scheduler.py  security.py
apps/backend/src/scheduler/: scheduler.py  scheduler_service.py
apps/backend/src/scripts/: test_connections.py
apps/backend/src/services/: activity_service.py  session_service.py
apps/backend/src/services/ai/: agent.py  agent_markdown.py  agent_service.py  auto_scan_agent.py  (+9 more)
apps/backend/src/shared/: rate_limiter.py  redis_service.py  sanitizer.py  test_confidence_engine.py  test_duplicate_removal_engine.py  test_email.py  test_ist_scheduler.py  test_llms.py  test_new_org.py  test_once_scheduler.py  verify_system.py  websockets.py
apps/backend/tests/: conftest.py
(+373 files in other folders)
